--- a/index.html
+++ b/index.html
@@ -2,96 +2,118 @@
 <html lang="en">
 
 <head>
-    <title>Welcome TO IIIT-NR</title>
+    <!-- Google Site Verification -->
+    <meta name="google-site-verification" content="0Dx5jEv4MrtLpqN5SGlB2gj71cUucAymG2eXS7Wz68I" />
+
+    <!-- Title with Keywords -->
+    <title>IIIT-NR: Premier IT Institute in Chhattisgarh</title>
+
+    <!-- Meta Tags for SEO -->
+    <meta name="description" content="Explore IIIT-NR, a premier IT institute in Chhattisgarh offering excellence in education, research, and innovation. Learn more about admissions, academics, and our vision.">
+    <meta name="keywords" content="IIIT-NR, IT institute, Chhattisgarh, education, research, innovation, admission, academics">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="canonical" href="https://riddikulus07.github.io/IIITNR-Website/index.html">
+
+    <!-- Schema.org Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "EducationalOrganization",
+      "name": "IIIT-Naya Raipur",
+      "url": "https://riddikulus07.github.io/IIITNR-Website/index.html",
+      "logo": "https://www.iiitnr.ac.in/sites/all/themes/iiit/images/logo.png",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Naya Raipur",
+        "addressRegion": "Chhattisgarh",
+        "postalCode": "492002",
+        "addressCountry": "India"
+      },
+      "sameAs": [
+        "https://www.facebook.com/IIITNayaRaipur",
+        "https://twitter.com/IIITNR",
+        "https://www.linkedin.com/school/iiitnaya-raipur"
+      ]
+    }
+    </script>
+
+    <!-- CSS Styles -->
     <style>
-        .a{
-            background-color:  #43536a;
-            
+        .a {
+            background-color: #43536a;
             padding-top: 12px;
             padding-bottom: 12px;
-            margin-left: none;
             color: white;
-            border-right-color: wheat;
-            border-right-style:solid ;
-            border-right-width:0.5px ;
-            border-top: none;
-            border-left: none;
-            border-bottom: none;
-    cursor: pointer;}
-    
-html, body {
-    width: 100%;
-    height: 100%;
-    margin: 0px;
-    padding: 0px;
-    color: white;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-text-align: center;
-background-color: #43536a}
-.h{
-overflow-x: hidden;
-height: 135px;
-}
+            border-right: 0.5px solid wheat;
+            cursor: pointer;
+            border: none;
+        }
+
+        html, body {
+            width: 100%;
+            height: 100%;
+            margin: 0px;
+            padding: 0px;
+            color: white;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            text-align: center;
+            background-color: #43536a;
+        }
+
+        .h {
+            overflow-x: hidden;
+            height: 135px;
+        }
     </style>
 </head>
 
 <body>
+    <!-- Header Section -->
     <div class="h">
-    <img src="https://www.iiitnr.ac.in/sites/all/themes/iiit/images/Headingwebsite.jpg" width="1366px" ; height="92px" style="display: block; " ><HR/ color="wheat" style="margin:0px;">  
-      <a href="index.html"><button style="width: 17%" class="a">HOME</button></a>
-    <a href="academics.html"><button style="width: 20%"class="a">ACADEMICS</button></a>
-    <a href="admission.html"><button style="width: 20%"class="a">ADMISSION</button></a>
-    <a href="gallery.html"><button style="width: 20% " class="a">GALLERY</button></a>
-    <a href="contact.html"><button style="width: 21.7% " class="a">CONTACT US</button></a>
-</div><HR/ color="wheat" style="margin:0px;">
-    <a href="index.html"><img src="https://www.iiitnr.ac.in/sites/all/themes/iiit/images/logo.png" alt="" style= "position: absolute; top: 160px;left: 120px; overflow-x: initial;" class="img"></a>
-    <img src="https://www.iiitnr.ac.in/sites/default/files/menu_banner_images/IMG_3307.jpg" width="100%" ; height="60%";>
-    <HR/ color="wheat" style="margin:0px;">
-    <h1>
-        <center>
-            ABOUT
-        </center>
-    </h1>
-    <HR/ color="wheat" style="margin:0px;">
-    <p> SPM IIIT-Naya Raipur, established by the International Institute of Information Technology University Act, 2013
-        of the
+        <img src="https://www.iiitnr.ac.in/sites/all/themes/iiit/images/Headingwebsite.jpg" alt="IIIT-NR Header Image" width="1366px" height="92px" style="display: block;">
+        <hr color="wheat" style="margin: 0px;">
+        <a href="index.html"><button style="width: 17%" class="a">HOME</button></a>
+        <a href="academics.html"><button style="width: 20%" class="a">ACADEMICS</button></a>
+        <a href="admission.html"><button style="width: 20%" class="a">ADMISSION</button></a>
+        <a href="gallery.html"><button style="width: 20%" class="a">GALLERY</button></a>
+        <a href="contact.html"><button style="width: 21.7%" class="a">CONTACT US</button></a>
+    </div>
+    <hr color="wheat" style="margin: 0px;">
+
+    <!-- Logo Section -->
+    <a href="index.html">
+        <img src="https://www.iiitnr.ac.in/sites/all/themes/iiit/images/logo.png" alt="IIIT-NR Logo" style="position: absolute; top: 160px; left: 120px;">
+    </a>
+    <img src="https://www.iiitnr.ac.in/sites/default/files/menu_banner_images/IMG_3307.jpg" alt="IIIT-NR Campus Banner" width="100%" height="60%">
+    <hr color="wheat" style="margin: 0px;">
+
+    <!-- Content Section -->
+    <h1>ABOUT</h1>
+    <hr color="wheat" style="margin: 0px;">
+    <p> SPM IIIT-NR, established by the International Institute of Information Technology University Act, 2013 of the
         Government of Chhattisgarh, is a joint venture by Chhattisgarh State Government and National Thermal Power
-        Corporation (NTPC).
-        The institute is committed to pursue excellence in higher education, research and development in Information
-        Technology (IT)
-        and associated disciplines. It firmly believes in bestowing knowledge dissemination and imparting
-        entrepreneurial skills to
-        the students to enable them to address real world problems. To empower this vision, IIIT-NR fosters
-        state-of-the-art research
-        and product development laboratories to carry out inter-disciplinary research and product development
-        endeavours.</p>
+        Corporation (NTPC). The institute is committed to pursuing excellence in higher education, research, and
+        development in Information Technology (IT) and associated disciplines. It firmly believes in bestowing
+        knowledge dissemination and imparting entrepreneurial skills to the students to enable them to address real-world problems. To empower this vision, IIIT-NR fosters state-of-the-art research and product development laboratories to carry out interdisciplinary research and product development endeavours.</p>
     <br>
-    <p> Dr. SPM IIIT-NR's fifty-acres residential campus is located in the newly developed smart city of Atal Nagar,
-        approximately
-        23 kms from the city of Raipur. The vibrant lush green campus of IIIT-NR is enabled with Wi-Fi connectivity,
-        CCTV
-        surveillance, hi tech security measures and excellent amenities for sports and other recreational activities.
-        The modern
-        architecture of the buildings and the serene environment of the campus fosters an ambience for the students for
-        creativity
-        and innovation. The classrooms are equipped with state-of-the art technologies for teaching and learning.</p>
-        <HR/ color="wheat" style="margin:0px;">
-    <h1 >
-        <center>
-            VISION
-            </center>
-    </h1>
-    <HR/ color="wheat" style="margin:0px;">    <p>Produce High Quality IT Professionals and Foster Technological Innovation for Social Upliftment.</p>
-    <HR/ color="wheat" style="margin:0px;">
-    <h1>
-        <center>
-         MISSION
-        </center>
-    </h1>
-    <HR/ color="wheat" style="margin:0px;">
+    <p> Dr. SPM IIIT-NR's fifty-acre residential campus is located in the newly developed smart city of Atal Nagar,
+        approximately 23 km from the city of Raipur. The vibrant lush green campus of IIIT-NR is enabled with Wi-Fi
+        connectivity, CCTV surveillance, hi-tech security measures, and excellent amenities for sports and other
+        recreational activities. The modern architecture of the buildings and the serene environment of the campus
+        foster an ambiance for the students for creativity and innovation. The classrooms are equipped with
+        state-of-the-art technologies for teaching and learning.</p>
+    <hr color="wheat" style="margin: 0px;">
+
+    <h1>VISION</h1>
+    <hr color="wheat" style="margin: 0px;">
+    <p>Produce High-Quality IT Professionals and Foster Technological Innovation for Social Upliftment.</p>
+    <hr color="wheat" style="margin: 0px;">
+
+    <h1>MISSION</h1>
+    <hr color="wheat" style="margin: 0px;">
     <p>To Create an Institute of Excellence in IT Education and Research for Meeting the Emerging and Challenging needs
-        of the Society.</p>
-        <br>
+        of Society.</p>
+    <br>
 </body>
 
 </html>
