--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="description" content="Explore IIIT-NR, a premier IT institute in Chhattisgarh offering excellence in education, research, and innovation. Learn more about admissions, academics, and our vision.">
     <meta name="keywords" content="IIIT-NR, IT institute, Chhattisgarh, education, research, innovation, admission, academics">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://riddikulus07.github.io/IIITNR-Website/index.html">
+    <link rel="canonical" href="https://iiitnr-website.vercel.app/">
 
     <!-- Schema.org Structured Data -->
     <script type="application/ld+json">
@@ -20,7 +20,7 @@
       "@context": "https://schema.org",
       "@type": "EducationalOrganization",
       "name": "IIIT-Naya Raipur",
-      "url": "https://riddikulus07.github.io/IIITNR-Website/index.html",
+      "url": "https://iiitnr-website.vercel.app/",
       "logo": "https://www.iiitnr.ac.in/sites/all/themes/iiit/images/logo.png",
       "address": {
         "@type": "PostalAddress",
