--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <!-- Google Site Verification -->
-    <meta name="google-site-verification" content="kj3Ct1R1xk36Gzv0knZFoNkWB6tW4_jxkeeHa0tYN0Y" />
+    <meta name="google-site-verification" content="0Dx5jEv4MrtLpqN5SGlB2gj71cUucAymG2eXS7Wz68I" />
 
     <!-- Title with Keywords -->
     <title>IIIT-NR: Premier IT Institute in Chhattisgarh</title>
@@ -12,7 +12,7 @@
     <meta name="description" content="Explore IIIT-NR, a premier IT institute in Chhattisgarh offering excellence in education, research, and innovation. Learn more about admissions, academics, and our vision.">
     <meta name="keywords" content="IIIT-NR, IT institute, Chhattisgarh, education, research, innovation, admission, academics">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://iiitnr-website.vercel.app/">
+    <link rel="canonical" href="https://riddikulus07.github.io/IIITNR-Website/index.html/">
 
     <!-- Schema.org Structured Data -->
     <script type="application/ld+json">
@@ -20,7 +20,7 @@
       "@context": "https://schema.org",
       "@type": "EducationalOrganization",
       "name": "IIIT-Naya Raipur",
-      "url": "https://iiitnr-website.vercel.app/",
+      "url": "https://riddikulus07.github.io/IIITNR-Website/index.html/",
       "logo": "https://www.iiitnr.ac.in/sites/all/themes/iiit/images/logo.png",
       "address": {
         "@type": "PostalAddress",
