--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- Meta Tags for SEO -->
     <meta name="description" content="Explore IIIT-NR, a premier IT institute in Chhattisgarh offering excellence in education, research, and innovation. Learn more about admissions, academics, and our vision.">
-    <meta name="keywords" content="IIIT-NR, IT institute, Chhattisgarh, education, research, innovation, admission, academics">
+    <meta name="keywords" content="I love IIIT Naya Raipur, IIIT-NR, IIIT Naya Raipur academics, I love IIIT-NR, IT institute, Chhattisgarh, education, research, innovation, admission, academics">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://riddikulus07.github.io/IIITNR-Website/index.html/">
 
